@@ -343,6 +343,7 @@ SOCKET_OBJ = \
 	socket_ioctl.o \
 	socket_isdaemon.o \
 	socket_listen.o \
+	socket_obtain_daemon.o \
 	socket_recv.o \
 	socket_recvfrom.o \
 	socket_recvmsg.o \
