@@ -96,6 +96,7 @@ extern struct fd * __get_file_descriptor_socket(int socket_descriptor);
 extern int __socket_hook_entry(struct fd * fd,struct file_action_message * fam);
 extern int __get_h_errno(void);
 extern void __set_h_errno(int new_h_errno);
+extern BOOL __obtain_daemon_message(VOID);
 
 /****************************************************************************/
 
